--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
     "electron": "32.1.0",
     "eslint": "^8.57.1",
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import": "^2.30.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12",
     "ts-node": "^10.9.2",
     "typescript": "~4.5.4",
     "vite": "^5.4.6"
