--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "yumu",
-  "productName": "yumu",
+  "productName": "Yumu",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "Yumu is an unofficial YouTube Music desktop app.",
   "main": ".vite/build/main.js",
   "scripts": {
     "start": "electron-forge start",
@@ -33,6 +33,8 @@
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-import": "^2.30.0",
     "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.6",
     "tailwindcss": "^3.4.12",
     "ts-node": "^10.9.2",
     "typescript": "~4.5.4",
@@ -40,13 +42,19 @@
   },
   "keywords": [],
   "author": {
-    "name": "Joel Lopez",
-    "email": "joel.lopez@gamershive.net"
+    "name": "Joel",
+    "email": "joel@typefasterjoel.com"
   },
   "license": "MIT",
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "electron-squirrel-startup": "^1.0.1",
+    "lucide-react": "^0.441.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
