--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,13 @@
 {
+  "files": [],
+  "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }],
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "commonjs",
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "noImplicitAny": true,
-    "sourceMap": true,
+    "verbatimModuleSyntax": true,
     "baseUrl": ".",
-    "outDir": "dist",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "jsx": "react",
     "paths": {
-      "@/*": ["src/*"]
+      "@renderer/*": ["src/renderer/src/*"],
+      "@main/*": ["src/main/src/*"],
+      "@ipc/*": ["src/ipc/src/*"],
     }
   }
 }
