--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yumu",
   "version": "1.0.0",
-  "description": "An Electron application with React and TypeScript",
+  "description": "Unofficial Youtube Music Desktop Application",
   "main": "./out/main/index.js",
   "author": "example.com",
   "homepage": "https://electron-vite.org",
