--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -13,6 +13,7 @@ asarUnpack:
   - resources/**
 win:
   executableName: yumu
+  icon: build/icons/icon.ico
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
@@ -20,6 +21,7 @@ nsis:
   createDesktopShortcut: always
 mac:
   entitlementsInherit: build/entitlements.mac.plist
+  icon: build/icons/icon.icns
   extendInfo:
     - NSCameraUsageDescription: Application requests access to the device's camera.
     - NSMicrophoneUsageDescription: Application requests access to the device's microphone.
@@ -35,6 +37,7 @@ linux:
     - deb
   maintainer: electronjs.org
   category: Utility
+  icon: build/icons/icon.png
 appImage:
   artifactName: ${name}-${version}.${ext}
 npmRebuild: false
