--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
 appId: com.electron.app
-productName: yumu
+productName: Yumu
 directories:
   buildResources: build
 files:
@@ -22,6 +22,7 @@ nsis:
 mac:
   entitlementsInherit: build/entitlements.mac.plist
   icon: build/icons/icon.icns
+  executableName: Yumu
   extendInfo:
     - NSCameraUsageDescription: Application requests access to the device's camera.
     - NSMicrophoneUsageDescription: Application requests access to the device's microphone.
