--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,15 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        - os: macos-latest
+          build_cmd: pnpm build:mac
+          artifacts: dist/*.dmg
+        - os: ubuntu-latest
+          build_cmd: pnpm build:linux
+          artifacts: dist/*.AppImage
+        - os: windows-latest
+          build_cmd: pnpm build:win
+          artifacts: dist/*.exe
 
     steps:
       - name: Check out Git repository
@@ -31,7 +39,7 @@ jobs:
         run: pnpm install
 
       - name: Build application
-        run: pnpm build
+        run: ${{ matrix.build_cmd }}
         env:
           # These are used by electron-builder
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -40,12 +48,6 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: |
-            dist/*.exe
-            dist/*.dmg
-            dist/*.AppImage
-            dist/*.deb
-            dist/*.rpm
-            dist/*.tar.gz
+          files: ${{ matrix.artifacts }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
