adding some missing things for release. fixing linux

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,9 @@ jobs:
             artifacts: dist/*.dmg
           - os: ubuntu-latest
             build_cmd: pnpm build:linux
-            artifacts: dist/*.AppImage
+            artifacts: |
+              dist/*.AppImage
+              dist/*.deb
           - os: windows-latest
             build_cmd: pnpm build:win
             artifacts: dist/*.exe
