Fixing MacOS Media Keys
Mac requires accessibility access to the app in order for it to listen to the media keys. Added dialog to invoke permissions, but will require manual Restart.

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -23,7 +23,8 @@ mac:
   entitlementsInherit: build/entitlements.mac.plist
   icon: build/icons/icon.icns
   executableName: Yumu
-  identity: null
+  hardenedRuntime: false
+  gatekeeperAssess: false
   extendInfo:
     # - NSCameraUsageDescription: Application requests access to the device's camera.
     # - NSMicrophoneUsageDescription: Application requests access to the device's microphone.
@@ -32,6 +33,7 @@ mac:
   notarize: false
 dmg:
   artifactName: ${name}-${version}.${ext}
+  backgroundColor: '#222222'
 linux:
   target:
     - AppImage
