--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yumu",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Unofficial Youtube Music Desktop Application",
   "main": "./out/main/index.js",
   "author": "typefasterjoel",
@@ -24,6 +24,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
