using Discord's types instead of my own. Adding Image

--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
   "pnpm": {
     "onlyBuiltDependencies": [
       "electron",
-      "esbuild"
+      "esbuild",
+      "phantomjs-prebuilt"
     ],
     "ignoredBuiltDependencies": [
       "@tailwindcss/oxide",
